# src/routes/mahasiswabyid.js
@@ -3,15 +3,6 @@ import { getStudentById } from "../lib/students.js";
 
 const router = Router();
 
-// List mahasiswa (default)
-router.get("/", async (req, res) => {
-  const { page, search } = req.query;
-
-  res.json(req.query);
-  // respons yg dibutuhkan: data2 mahasiswa sesuai page, jumlah page, ___
-  // res.json(getMahasiswa(page, search)); // Function untuk query dari database akan segera datang!!!
-});
-
 // Get mahasiswa by ID
 router.get("/:id", async (req, res) => {
   try {
